# server

./: .env.example  .gitignore  Dockerfile  README_PYDANTIC_AI_INTEGRATION.md  docker-compose.yml  init-db.sql  requirements.txt  test_pydantic_ai_integration.py
TODO/: .env  pyproject.toml  requirements.txt  run_stock_analyst.py
TODO/stock_analyst/: __init__.py  agent.py  cli.py  config.py  csv_tool.py  main.py  mcp_client.py  models.py
app/: main.py
app/agents/: AITinker_demo_analyst_agent.py  demo_pdf_transaction_extractor.py  llm_service.py  pydantic_ai_stock_analyst.py  tavily_search_news.py
app/api/: chat.py  dashboard.py  stock_analysis.py  transactions.py
app/database/: connection.py  repository.py
app/models/: messages.py
app/services/: agent_service.py
sample_data/: InteractiveBrokers_Activity_Statement.json
